# VibeCheck

./: .gitignore  README.md  pyproject.toml
src/vibecheck/: __init__.py
src/vibecheck/api/: app.py
src/vibecheck/models/: verdict.py
tests/: test_health.py
